# social-media-posts

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
adapters/: twitter_adapter.py  youtube_adapter.py
api/: dependencies.py  middleware.py
api/exceptions/: api_exceptions.py
api/response_models/: responses.py
api/routes/: channels.py  health.py  posts.py
config/: settings.py
core/: base.py  exceptions.py  models.py
services/: fetcher_service.py  instagram_service.py  twitter_service.py  youtube_service.py
utils/: http_client.py
